--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,7 +160,7 @@ footer, footer a{
             border: 1px solid #E20000;
         }
     #inicio footer, footer a {
-            color:#E20000
+            color:#E20000;
             font-weight: 100;
         }
 }
