--- a/css/estilos.css
+++ b/css/estilos.css
@@ -139,6 +139,10 @@ footer, footer a{
 .imagen-portfolio{
     height:300px;
 }
+.imagen-circle{
+    background-color: white;
+    padding: 10px;
+}
 .whatsapp{
     position: fixed;
     right: 70px;
