--- a/css/estilos.css
+++ b/css/estilos.css
@@ -138,6 +138,9 @@ footer, footer a{
 }
 .imagen-portfolio{
     height:300px;
+    border-radius: 50%;
+    background-color: white;
+    padding: 10px;
 }
 .whatsapp{
     position: fixed;
