--- a/css/estilos.css
+++ b/css/estilos.css
@@ -135,6 +135,9 @@ input{
 .proyecto img{
     height: 208px;
 }
+.gradiente{
+    background: linear-gradient(90deg, rgba(180,58,58,1) 0%, rgba(253,29,29,1) 50%, rgb(164, 17, 17) 100%);
+}
 footer, footer a{
     color: white;
     font-weight: 100;
