--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,7 +136,8 @@ input{
     height: 208px;
 }
 .gradiente{
-    background: linear-gradient(90deg, rgba(180,58,58,1) 0%, rgba(253,29,29,1) 50%, rgb(164, 17, 17) 100%);
+    background: rgb(217,18,18);
+background: linear-gradient(90deg, rgba(217,18,18,1) 39%, rgba(252,113,69,1) 100%);
 }
 footer, footer a{
     color: white;
