--- a/css/estilos.css
+++ b/css/estilos.css
@@ -139,6 +139,10 @@ input{
     background: rgb(217,18,18);
 background: linear-gradient(90deg, rgba(217,18,18,1) 39%, rgba(252,113,69,1) 100%);
 }
+.text-tecno{
+    font-size: 24px !important;
+    color: white;
+}
 footer, footer a{
     color: white;
     font-weight: 100;
