--- a/css/estilos.css
+++ b/css/estilos.css
@@ -106,6 +106,11 @@ input{
     background-repeat: no-repeat;
     background-size: 100%;
 }
+#tecnologias h3{
+    font-size: 14px;
+    color: #282828;
+    font-weight: 300;
+}
 #contacto{
     background-image: url(../images/fondo-contacto.png);
     background-repeat: no-repeat;
