--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,16 +117,19 @@ input{
 #experiencia h2{
     font-size: 24px;
 }
-#experiencia h3{
+#experiencia h3, #formacion h3{
     color: #6A6A6A;
     font-size: 18px;
     font-weight: 600;  
 }
-#experiencia h4{
+#experiencia h4, #formacion h4{
     font-size: 19px;
 }
-#experiencia h5{
+#experiencia h5, #formacion h5{
     font-size: 14px;
+}
+#formacion h2{
+    
 }
 #contacto{
     background-image: url(../images/fondo-contacto.png);
