--- a/css/estilos.css
+++ b/css/estilos.css
@@ -129,7 +129,8 @@ input{
     font-size: 14px;
 }
 #formacion h2{
-    
+    color: #e20000;
+    font-size: 24px;
 }
 #contacto{
     background-image: url(../images/fondo-contacto.png);
